# CVInfer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  readme.md  version.h
Testing/: TAG
Testing/20240826-0250/: Test.xml
doc/: benchmarked.md
env/: docker-compose.yaml  dockerfile
src/: CMakeLists.txt
src/api/: cv_infer.h
src/engine/: engine_base.h  math.cpp  math.h  preprocess_kernal.cu  preprocess_kernal.cuh  rk_infer.h  timer_gpu.cu  timer_gpu.cuh  trt_infer.cpp  trt_infer.h
src/math/: math.cpp  math.h  nms.h
src/model/: model.h  model_base.h  personball.cpp  personball.h  personball_mini.h  poseseg.h  yolo.h
src/node/: decoder_node.cpp  decoder_node.h  encoder_node.cpp  encoder_node.h  image_loader.cpp  image_loader.h  infer_node.h  node_base.cpp  node_base.h
src/pipeline/: pipeline_base.cpp  pipeline_base.h
src/signal/: signal.cpp  signal.h  signal_base.h
src/tools/: defines.h  logger.cpp  logger.h  queue.h  threadpool.h  timer.h  uuid.cpp  uuid.h  version.h  version.h.in
test/: CMakeLists.txt  demo.cpp  test_engine.cpp  test_image.cpp  test_node.cpp  test_tools.cpp
